# mission_control_package

./: CMakeLists.txt  Doxyfile  README.md  package.xml
assets/: mission_test.json
include/: command.hpp  event_loop_guard.hpp  main.hpp  mission_control.hpp  mission_definition_file.hpp  structs.hpp
include/external_libs/: geofence.hpp
src/: basics.cpp  callbacks.cpp  command.cpp  main.cpp  mission_control.cpp  mission_definition_file.cpp  modes.cpp  subscriber_member_function.cpp
test/: basics_test.cpp  callbacks_test.cpp  event_loop_guard_test.cpp  main_test.cpp  mission_control_test.cpp  modes_test.cpp  structs_test.cpp
test/mission_file_reader/: mission_file_reader_test.cpp
test/mission_file_reader/test_assets/: mdf_correct_init_only.json  mdf_correct_set_marker.json  mdf_duplicate_geofence_point.json  mdf_empty_markers.json  mdf_incorrect_detect_marker.json  mdf_incorrect_set_marker.json  mdf_incorrect_set_marker_2.json  mdf_incorrect_set_marker_3.json  mdf_incorrect_set_marker_4.json  mdf_invalid_marker_1.json  mdf_invalid_marker_2.json  mdf_invalid_safety_values_1.json  mdf_invalid_safety_values_2.json  mdf_invalid_waypoint.json  mdf_no_end_mission.json  mdf_no_geofence.json  mdf_no_geofence_points.json  mdf_no_init_marker.json  mdf_no_markers.json  mdf_too_less_geofence_points.json  mdf_too_many_detect_marker.json  mdf_too_many_set_marker.json
